--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,9 @@ spring:
                 format_sql: true
         show-sql: true
     flyway:
-        locations: db/migration
-        baseline-on-migrate: true
+      baseline-on-migrate: true
+      enabled: true
 
-
+server:
+  servlet:
+    context-path: /spring
